new currency (USD) added

--- a/popup.html
+++ b/popup.html
@@ -23,6 +23,9 @@
         <div class="currency-select">
             <span>From</span>
             <select name=""  id="old_currency">
+                <option value="USD">
+                    USD
+                </option>
                 <option value="EUR">
                     EUR
                 </option>
@@ -35,6 +38,7 @@
 
             <span>To</span>
             <select name="" id="currency">
+                <option value="USD">USD</option>
                 <option value="EUR">EUR</option>
                 <option value="CAD">CAD</option>
                 <option value="GBP">GBP</option>
